--- a/.github/workflows/ci-initialise-aws.yml
+++ b/.github/workflows/ci-initialise-aws.yml
@@ -1,5 +1,5 @@
 # This workflow runs automated tests whenever code is pushed to any branch
-name: CI Pipeline
+name: CI Pipeline AWS
 
 # Define when the workflow should run
 on:
@@ -8,19 +8,19 @@ on:
       - 'main'  # Run on push to main branch only
       - 'develop'  # Run on push to develop branch
     paths:
-      - 'rag-app/**'  # Only run when changes are made to the rag-app directory
+      - 'rag-app-aws/**'  # Only run when changes are made to the rag-app-aws directory
   pull_request:
     branches:
       - 'main'  # Run on pull requests to main branch
     paths:
-      - 'rag-app/**'  # Only run when changes are made to the rag-app directory
+      - 'rag-app-aws/**'  # Only run when changes are made to the rag-app-aws directory
   workflow_dispatch:  # Manual trigger
 
 # Define environment variables needed for the application
 env:
   # Basic application settings
   ENVIRONMENT: test
-  APP_NAME: rag-app
+  APP_NAME: rag-app-aws
   DEBUG: "true"
   
   # Database connection settings (for testing only)
@@ -43,7 +43,7 @@ env:
   OPIK_API_KEY: ${{ secrets.OPIK_API_KEY }}
   OPIK_WORKSPACE: ${{ secrets.OPIK_WORKSPACE }}
   OPIK_ENVIRONMENT: test
-  OPIK_PROJECT_NAME: rag-app-test
+  OPIK_PROJECT_NAME: rag-app-aws-test
   
   # OpenAI settings
   OPENAI_MODEL: gpt-3.5-turbo
@@ -54,7 +54,7 @@ env:
 
 jobs:
   ci:
-    name: CI Pipeline
+    name: CI Pipeline AWS
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -89,7 +89,7 @@ jobs:
           path: |
             ~/.local
             ~/.cache/pypoetry
-            ./rag-app/.venv
+            ./rag-app-aws/.venv
           key: poetry-${{ runner.os }}-${{ env.POETRY_VERSION }}-${{ hashFiles('**/poetry.lock') }}
           restore-keys: |
             poetry-${{ runner.os }}-${{ env.POETRY_VERSION }}-
@@ -103,20 +103,20 @@ jobs:
           
       # Step 4.5: Ensure setuptools is properly installed
       - name: Install setuptools
-        working-directory: ./rag-app
+        working-directory: ./rag-app-aws
         run: |
           python -m pip install --upgrade setuptools==68.2.2
           
       # Step 4.6: Clean up problematic packages
       - name: Clean up problematic packages
-        working-directory: ./rag-app
+        working-directory: ./rag-app-aws
         run: |
           # Remove problematic NVIDIA packages if they exist
           pip uninstall -y nvidia-cuda-runtime-cu12 nvidia-cuda-cupti-cu12 nvidia-cuda-nvrtc-cu12 nvidia-cudnn-cu12 nvidia-cufft-cu12 nvidia-curand-cu12 nvidia-cusolver-cu12 nvidia-nccl-cu12 nvidia-nvtx-cu12 || true
           
       # Step 5: Install project dependencies
       - name: Install dependencies
-        working-directory: ./rag-app
+        working-directory: ./rag-app-aws
         run: |
           echo "Installing dependencies..."
           poetry install --no-interaction --no-root
@@ -124,7 +124,7 @@ jobs:
       
       # Step 6: Initialize database and run tests
       - name: Initialize database and run tests
-        working-directory: ./rag-app
+        working-directory: ./rag-app-aws
         run: |
           # Wait for PostgreSQL to be ready
           echo "Waiting for PostgreSQL to be ready..."
@@ -144,12 +144,12 @@ jobs:
         with:
           name: test-results
           path: |
-            rag-app/test-results.xml
-            rag-app/coverage.xml
+            rag-app-aws/test-results.xml
+            rag-app-aws/coverage.xml
       
       # Step 13: Install linting tools - TEMPORARILY DISABLED
       # - name: Install linting tools
-      #   working-directory: ./rag-app
+      #   working-directory: ./rag-app-aws
       #   run: |
       #     echo "Installing linting tools..."
       #     poetry add --group dev flake8 black isort
@@ -157,7 +157,7 @@ jobs:
       
       # Step 14: Run linting - TEMPORARILY DISABLED
       # - name: Run linting
-      #   working-directory: ./rag-app
+      #   working-directory: ./rag-app-aws
       #   run: |
       #     poetry run flake8 server/src tests
       #     poetry run black --check server/src tests
@@ -171,14 +171,13 @@ jobs:
       #   uses: docker/setup-buildx-action@v3
       
       # - name: Build PostgreSQL image
-      #   working-directory: ./rag-app/deploy/docker/postgres
+      #   working-directory: ./rag-app-aws/deploy/docker/postgres
       #   run: |
-      #     docker build -t rag-app-postgres:latest -f pgvector2.Dockerfile .
+      #     docker build -t rag-app-aws-postgres:latest -f pgvector2.Dockerfile .
       
 
       
       # - name: Build application image
-      #   working-directory: ./rag-app
+      #   working-directory: ./rag-app-aws
       #   run: |
-      #     docker build -t rag-app:latest -f Dockerfile .
-
+      #     docker build -t rag-app-aws:latest -f Dockerfile . 
