--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,8 @@ aws/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Project specific
+rag-app/
+rag-app-aws/
+rag-app-simple/
