--- a/requirements.txt
+++ b/requirements.txt
@@ -41,3 +41,6 @@ trove-classifiers==2024.9.12
 urllib3==2.2.3
 virtualenv==20.26.5
 wheel==0.44.0
+plotly==6.0.1
+uvicorn==0.34.2
+fastapi==0.115.12
