--- a/.github/workflows/ci-initialise-aws.yml
+++ b/.github/workflows/ci-initialise-aws.yml
@@ -5,13 +5,13 @@ name: CI Pipeline AWS
 on:
   push:
     branches:
-      - 'main'
-      - 'develop'
+      - 'main'  # Run on push to main branch only
+      - 'develop'  # Run on push to develop branch
     paths:
-      - 'rag-app-aws/**'
+      - 'rag-app-aws/**'  # Only run when changes are made to the rag-app-aws directory
   pull_request:
     branches:
-      - 'main'
+      - 'main'  # Run on pull requests to main branch
     paths:
       - 'rag-app-aws/**'
   workflow_dispatch:
@@ -48,6 +48,14 @@ env:
   # OpenAI settings
   OPENAI_MODEL: gpt-3.5-turbo
   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+  
+  # AWS settings
+  AWS_REGION: us-east-1
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+  BEDROCK_MODEL_ID: ${{ secrets.BEDROCK_MODEL_ID }}
+  BEDROCK_EMBEDDING_MODEL_ID: ${{ secrets.BEDROCK_EMBEDDING_MODEL_ID }}
 
   # Poetry version to use
   POETRY_VERSION: "1.8.2"
@@ -56,7 +64,6 @@ jobs:
   ci:
     name: CI Pipeline AWS
     runs-on: ubuntu-latest
-
     services:
       postgres:
         image: ankane/pgvector:latest
@@ -71,77 +78,51 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-
     steps:
       # Step 1: Check out the code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Step 2: Set up Python
+      # Step 2: Set up Python environment
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
           cache: 'pip'
 
-      # Step 2.5: Cache pip downloads
-      - name: Cache pip downloads
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: pip-cache-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: |
-            pip-cache-${{ runner.os }}-
-
-      # Step 3: Cache Poetry installation
-      - name: Cache Poetry installation
+      # Step 3: Cache Poetry installation and dependencies
+      - name: Cache Poetry and dependencies
         uses: actions/cache@v3
         with:
           path: |
             ~/.local
             ~/.cache/pypoetry
-          key: poetry-cache-${{ runner.os }}-${{ env.POETRY_VERSION }}
+            ./rag-app-aws/.venv
+          key: poetry-${{ runner.os }}-${{ env.POETRY_VERSION }}-${{ hashFiles('**/poetry.lock') }}
           restore-keys: |
-            poetry-cache-${{ runner.os }}-
+            poetry-${{ runner.os }}-${{ env.POETRY_VERSION }}-
 
-      # Step 4: Cache project virtual environment
-      - name: Cache project virtual environment
-        uses: actions/cache@v3
-        with:
-          path: ./rag-app-aws/.venv
-          key: venv-cache-${{ runner.os }}-${{ hashFiles('rag-app-aws/poetry.lock') }}
-          restore-keys: |
-            venv-cache-${{ runner.os }}-
-
-      # Step 5: Install Poetry
+      # Step 4: Install Poetry package manager
       - name: Install Poetry
         run: |
           curl -sSL https://install.python-poetry.org | python3 - --version ${{ env.POETRY_VERSION }}
           poetry config virtualenvs.create true
           poetry config virtualenvs.in-project true
 
-      # Step 5.4: Clean up previous virtual environment
-      - name: Clean up existing virtual environment
-        working-directory: ./rag-app-aws
-        run: |
-          echo "Removing old .venv folder if exists..."
-          rm -rf .venv
-          echo "Cleaning .pytest_cache if exists..."
-          rm -rf .pytest_cache
-
-      # Step 5.5: Install setuptools
+      # Step 4.5: Ensure setuptools is properly installed
       - name: Install setuptools
         working-directory: ./rag-app-aws
         run: |
           python -m pip install --upgrade setuptools==68.2.2
 
-      # Step 5.6: Clean up problematic packages
+      # Step 4.6: Clean up problematic packages
       - name: Clean up problematic packages
         working-directory: ./rag-app-aws
         run: |
+          # Remove problematic NVIDIA packages if they exist
           pip uninstall -y nvidia-cuda-runtime-cu12 nvidia-cuda-cupti-cu12 nvidia-cuda-nvrtc-cu12 nvidia-cudnn-cu12 nvidia-cufft-cu12 nvidia-curand-cu12 nvidia-cusolver-cu12 nvidia-nccl-cu12 nvidia-nvtx-cu12 || true
 
-      # Step 6: Install project dependencies
+      # Step 5: Install project dependencies
       - name: Install dependencies
         working-directory: ./rag-app-aws
         run: |
@@ -149,26 +130,22 @@ jobs:
           poetry install --no-interaction --no-root
           echo "Installation complete!"
 
-      # Step 6.5: Debug - List project files
-      - name: Debug - List project files
-        working-directory: ./rag-app-aws
-        run: |
-          echo "Listing all files in rag-app-aws project:"
-          find .
-
-      # Step 7: Initialize database and run tests
+      # Step 6: Initialize database and run tests
       - name: Initialize database and run tests
         working-directory: ./rag-app-aws
         run: |
+          # Wait for PostgreSQL to be ready
           echo "Waiting for PostgreSQL to be ready..."
           until poetry run python -c "import psycopg2; conn = psycopg2.connect(dbname='test_db', user='test_user', password='test_password', host='localhost'); conn.close()" 2>/dev/null; do
             echo "PostgreSQL is unavailable - sleeping"
             sleep 1
           done
           echo "PostgreSQL is up - executing tests"
+          
+          # Run tests with coverage
           poetry run pytest tests/ -v --junitxml=test-results.xml --cov=server --cov-report=xml
 
-      # Step 8: Upload test results and coverage
+      # Step 7: Upload test results and coverage as artifacts
       - name: Upload test results and coverage
         uses: actions/upload-artifact@v4
         if: always()
@@ -177,3 +154,39 @@ jobs:
           path: |
             rag-app-aws/test-results.xml
             rag-app-aws/coverage.xml
+      
+      # Step 13: Install linting tools - TEMPORARILY DISABLED
+      # - name: Install linting tools
+      #   working-directory: ./rag-app
+      #   run: |
+      #     echo "Installing linting tools..."
+      #     poetry add --group dev flake8 black isort
+      #     echo "Linting tools installation complete"
+      
+      # Step 14: Run linting - TEMPORARILY DISABLED
+      # - name: Run linting
+      #   working-directory: ./rag-app
+      #   run: |
+      #     poetry run flake8 server/src tests
+      #     poetry run black --check server/src tests
+      #     poetry run isort --check-only server/src tests
+      
+      # Step 15: Build Docker images - TEMPORARILY DISABLED
+      # NOTE: Docker builds are disabled due to certificate access limitations.
+      # The PostgreSQL image build requires Zscaler certificates which cannot be
+      # shared in the public repository for security reasons.
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3
+      
+      # - name: Build PostgreSQL image
+      #   working-directory: ./rag-app/deploy/docker/postgres
+      #   run: |
+      #     docker build -t rag-app-postgres:latest -f pgvector2.Dockerfile .
+      
+
+      
+      # - name: Build application image
+      #   working-directory: ./rag-app
+      #   run: |
+      #     docker build -t rag-app:latest -f Dockerfile .
+
