starting multi-model update

--- a/rag-app-aws/pytest.ini
+++ b/rag-app-aws/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 filterwarnings =
-    ignore::SyntaxWarning:opik.evaluation.metrics.heuristics.regex_match 
+    ignore::SyntaxWarning:opik.evaluation.metrics.heuristics.regex_match
+    ignore::UserWarning:opik.*
+    ignore::opik.rest_api.core.api_error.ApiError 
