All models working

--- a/.github/workflows/ci-initialise.yml
+++ b/.github/workflows/ci-initialise.yml
@@ -49,6 +49,14 @@ env:
   OPENAI_MODEL: gpt-3.5-turbo
   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
   
+  # AWS settings
+  AWS_REGION: us-east-1
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+  BEDROCK_MODEL_ID: ${{ secrets.BEDROCK_MODEL_ID }}
+  BEDROCK_EMBEDDING_MODEL_ID: ${{ secrets.BEDROCK_EMBEDDING_MODEL_ID }}
+
   # Poetry version to use
   POETRY_VERSION: "1.8.2"
 
