--- a/rag-app/pyproject.toml
+++ b/rag-app/pyproject.toml
@@ -6,6 +6,9 @@ authors = ["Andrew P. McMahon"]
 license = "MIT"
 readme = "README.md"
 package-mode = false
+packages = [
+    { include = "server" }
+]
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -33,9 +36,7 @@ pytest-asyncio = "^0.24.0"
 pre-commit = "^4.0.1"
 
 [tool.pytest.ini_options]
-pythonpath = [
-  "."
-]
+pythonpath = ["."]
 
 [build-system]
 requires = ["poetry-core"]
