--- a/rag-app/pyproject.toml
+++ b/rag-app/pyproject.toml
@@ -10,6 +10,9 @@ packages = [
     { include = "server" }
 ]
 
+[tool.uv]
+native-tls = true
+
 [tool.poetry.dependencies]
 python = "^3.12"
 fastapi = "^0.115.0"
